Fix | overflow img on mobile view

--- a/css/style.css
+++ b/css/style.css
@@ -739,7 +739,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #portfolio #portfolio-wrapper {
-  padding-right: 15px;
+  padding-right: 5px;
 }
 
 #portfolio #portfolio-flters {
